Revision history for perl distribution Mojo-Redis

3.13 Not Released
 - Fix connection.t when using a remote server
 - Fix cursor.t to use TEST_ONLINE
   Contributor: Alexander Karelas

3.12 2018-12-07T12:04:19+0900
 - Add support for negative cache expire for serving stale data
 - Add destructor to Connection object to clean up connections
 - Add "close" event to Connection object

3.11 2018-08-17T00:01:33+0200
 - Fix invalid Makefile.PL

3.10 2018-08-16T23:41:10+0200
 - Add cluster commands #5
 - Add basic support for sentinel #13

3.09 2018-08-09T15:32:24+0200
 - Improved documentation for Cache

3.08 2018-08-02T15:37:32+0800
 - Add benchmark test #3
 - Fix cache() need to use Protocol::Redis because of binary data
 - Fix GEOPOS return value
 - Fix only decode response data if defined #19
 - Fix do not create new connection objects during global destruction
 - Improved return values in documentation

3.07 2018-07-12T09:59:05+0800
 - Add support for sending custom commands #18
 - Fix documentation issues
 - Will not enqueue connections if url() has changed

3.06 2018-07-11T11:00:01+0800
 - Fix processing exec() result
 - Improved example applications and add references from the POD

3.05 2018-07-11T10:24:59+0800
 - Fix holding $db in memory when issuing commands and returning promises
 - Add info_structured() method to Mojo::Redis::Database
 - Add example of Mojolicious application using Mojo::Redis::Cache

3.04 2018-07-11T09:24:09+0800
 - Add server commands #4
 - Add stream commands #6
 - Add support for keyspace notifications #10
 - Documented how pipelining works #7

3.03 2018-07-05T11:45:01+0800
 - Add eval(), evalsha() and script() #8
 - Cannot have a custom class for transactions #14

3.02 2018-07-01T18:24:37+0900
 - Add Mojo::Redis::Cache->memomize_p()
 - Add examples/twitter.pl
 - Add UTF-8 encoding as default and allow encoding to be changed #1
 - Add documentation for events #2
 - Add support for connecting to unix socket #12